crates/ruff_linter/src/rules/flake8_tidy_imports/snapshots/ruff_linter__rules__flake8_tidy_imports__tests__TID254__nested__module.snap
---
source: crates/ruff_linter/src/rules/flake8_tidy_imports/mod.rs
---
module.py:12:1: TID254 [*] Relative imports for sibling modules are required
   |
11 | # TID254
12 | from TID254.nested import _
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ TID254
13 | from TID254.nested.more import _
   |
   = help: Replace absolute sibling imports with relative imports

ℹ Safe fix
9  9  | from TID254.module import _
10 10 | 
11 11 | # TID254
12    |-from TID254.nested import _
   12 |+from . import _
13 13 | from TID254.nested.more import _

module.py:13:1: TID254 [*] Relative imports for sibling modules are required
   |
11 | # TID254
12 | from TID254.nested import _
13 | from TID254.nested.more import _
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ TID254
   |
   = help: Replace absolute sibling imports with relative imports

ℹ Safe fix
10 10 | 
11 11 | # TID254
12 12 | from TID254.nested import _
13    |-from TID254.nested.more import _
   13 |+from .more import _
